2.25.19

  [Jörg Frings-Fürst]
  * AST_CRON_WaalBoard3_gen.php:
    - Typo InGroup Search
  * New DB-Schema 1526: (2017-053)
    - Add servicelevel_* to system_settings.
  * admin.php:
    - Add servicelevel_* to system_settings.
    - Rename Git Release to Patch-Level.
  * help.php:
    - Add help for servicelevel.
    - Add missing help for dectect 3way calls.
  * Add upstream Rev. 2854: 
    - functions.php,
      vdc_db_query.php,
      vdc_form_display.php,
      admin_lists_custom.php,
      help.php: Added code for duplicate custom fields.


2.25.18

  [Jörg Frings-Fürst]
  * ADMIN_keepalive_ALL.pl: Add allow=ulaw and allow=slin to ASTloop,
      ASTblind and ASTplay (2017-048).
  * Add upstream Rev. 2849:
    - AST_email_web_report.pl.
  * agi-VDAD_ALL_inbound.agi: Move PLAY WELCOME MESSAGE before
      NO AGENT NO QUEUE CHECK (2017-049).
  * agi_DID_route.agi: Add "ON DUPLICATE KEY UPDATE"" into
      "INSERT INTO call_log" (2017-050).
  * new b2sum.sh to build checksums (2017-051).
  * Add upstream Rev. 2850:
    - non_agent_api.php: Added ability for update_lead function
      insert_if_not_found leads to be inserted into the hopper.
  * Add upstream Rev. 2851:
    - vicidial.php: Hide preview call if preview campaign option is disabled.
  * Add upstream Rev. 2852:
    - admin.php: Fixed issue with admin log viewer for logs of modifications
      made by deleted users.
  * Add upstream Rev. 2853:
    - help.php: Updated definitions of SALEs to specifically mention status
      flag of SALE set to Y.
  * Add upstream Rev. 2854:
    - vicidial.php: Hide preview call if preview campaign option is disabled.
  * New DB-Schema 1525: Add index uniqueid to (2017-052)
    - vicidial_agent_log,
      WallBoardData,
      WallBoardData_archive.
  * Release 2.25.18 2017-11-16.

2.25.17

  [Jörg Frings-Fürst]
  * Correct some typos:
    - AST_CRON_WallBoard3_gen.php,
    - WallBoard3.php,
    - Wall_js.php.
    - vicidial.php.